cpp/cronet_dart/cronet_dart_api.h



typedef Cronet_RESULT (*EngineShutdownCallback)(Cronet_EnginePtr self);

typedef void (*EngineDestroyCallback)(Cronet_EnginePtr self);

typedef Cronet_BufferPtr (*BufferCreateCallback)(void);

typedef void (*BufferInitWithAllocCallback)(Cronet_BufferPtr self,
    uint64_t size);

typedef int32_t (*UrlResponseInfoHttpStatusCodeGetCallback)(
    const Cronet_UrlResponseInfoPtr self);

typedef Cronet_String (*ErrorMessageGetCallback)(const Cronet_ErrorPtr self);

typedef Cronet_String (*UrlResponseInfoHttpStatusTextGetCallback)(
    const Cronet_UrlResponseInfoPtr self);

typedef Cronet_ClientContext (*UploadDataProviderGetClientContextCallback)(
    Cronet_UploadDataProviderPtr self);

typedef Cronet_ExecutorPtr (*ExecutorCreateWithCallback)(
    Cronet_Executor_ExecuteFunc);

typedef  void (*ExecutorSetClientContextCallback)(Cronet_ExecutorPtr self,
    Cronet_ClientContext client_context);

typedef Cronet_ClientContext (*ExecutorGetClientContextCallback)(
    Cronet_ExecutorPtr self);

typedef void (*ExecutorDestroyCallback)(Cronet_ExecutorPtr self);

typedef void (*RunnableRunCallback)(Cronet_RunnablePtr self);

typedef void (*RunnableDestroyCallback)(Cronet_RunnablePtr self);


//
// Callbacks
//
EXPORT void OnRedirectReceived(Cronet_UrlRequestCallbackPtr self,
                               Cronet_UrlRequestPtr request,
                               Cronet_UrlResponseInfoPtr info,
                               Cronet_String newLocationUrl);


EXPORT void OnResponseStarted(Cronet_UrlRequestCallbackPtr self,
                              Cronet_UrlRequestPtr request,
                              Cronet_UrlResponseInfoPtr info);


EXPORT void OnReadCompleted(Cronet_UrlRequestCallbackPtr self,
                            Cronet_UrlRequestPtr request,
                            Cronet_UrlResponseInfoPtr info,
                            Cronet_BufferPtr buffer,
                            uint64_t bytes_read);


EXPORT void OnSucceeded(Cronet_UrlRequestCallbackPtr self,
                        Cronet_UrlRequestPtr request,
                        Cronet_UrlResponseInfoPtr info);


EXPORT void OnFailed(Cronet_UrlRequestCallbackPtr self,
                     Cronet_UrlRequestPtr request,
                     Cronet_UrlResponseInfoPtr info,
                     Cronet_ErrorPtr error);


EXPORT void OnCanceled(Cronet_UrlRequestCallbackPtr self,
                       Cronet_UrlRequestPtr request,
                       Cronet_UrlResponseInfoPtr info);


EXPORT int64_t UploadDataProvider_GetLength(Cronet_UploadDataProviderPtr self);

EXPORT void UploadDataProvider_Read(Cronet_UploadDataProviderPtr self,
                                    Cronet_UploadDataSinkPtr upload_data_sink,
                                    Cronet_BufferPtr buffer);

EXPORT void UploadDataProvider_Rewind(Cronet_UploadDataProviderPtr self,
    Cronet_UploadDataSinkPtr upload_data_sink);

EXPORT void UploadDataProvider_Close(Cronet_UploadDataProviderPtr self);