lib/src/third_party/cronet_dart/generated_bindings.dart


  late final _UploadDataProvider_Read_ptr =
      _lookup<ffi.NativeFunction<Native_UploadDataProvider_Read>>(
          'UploadDataProvider_Read');
  late final _dart_UploadDataProvider_Read _UploadDataProvider_Read =
      _UploadDataProvider_Read_ptr.asFunction<_dart_UploadDataProvider_Read>();

  void UploadDataProvider_Rewind(
    ffi.Pointer<Cronet_UploadDataProviderPtr> self,
    ffi.Pointer<Cronet_UploadDataSinkPtr> upload_data_sink,
  ) {
    return _UploadDataProvider_Rewind(
      self,
      upload_data_sink,
    );
  }

  late final _UploadDataProvider_Rewind_ptr =
      _lookup<ffi.NativeFunction<Native_UploadDataProvider_Rewind>>(
          'UploadDataProvider_Rewind');
  late final _dart_UploadDataProvider_Rewind _UploadDataProvider_Rewind =
      _UploadDataProvider_Rewind_ptr.asFunction<
          _dart_UploadDataProvider_Rewind>();

  void UploadDataProvider_Close(
    ffi.Pointer<Cronet_UploadDataProviderPtr> self,
  ) {
    return _UploadDataProvider_Close(
      self,
    );
  }

  late final _UploadDataProvider_Close_ptr =
      _lookup<ffi.NativeFunction<Native_UploadDataProvider_Close>>(
          'UploadDataProvider_Close');
  late final _dart_UploadDataProvider_Close _UploadDataProvider_Close =
      _UploadDataProvider_Close_ptr.asFunction<
          _dart_UploadDataProvider_Close>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final CronetDart _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<Native_OnRedirectReceived>>
      get OnRedirectReceived => _library._OnRedirectReceived_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_OnResponseStarted>>
      get OnResponseStarted => _library._OnResponseStarted_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_OnReadCompleted>> get OnReadCompleted =>
      _library._OnReadCompleted_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_OnSucceeded>> get OnSucceeded =>
      _library._OnSucceeded_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_OnFailed>> get OnFailed =>
      _library._OnFailed_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_OnCanceled>> get OnCanceled =>
      _library._OnCanceled_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_UploadDataProvider_GetLength>>
      get UploadDataProvider_GetLength =>
          _library._UploadDataProvider_GetLength_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_UploadDataProvider_Read>>
      get UploadDataProvider_Read => _library._UploadDataProvider_Read_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_UploadDataProvider_Rewind>>
      get UploadDataProvider_Rewind => _library._UploadDataProvider_Rewind_ptr;
  ffi.Pointer<ffi.NativeFunction<Native_UploadDataProvider_Close>>
      get UploadDataProvider_Close => _library._UploadDataProvider_Close_ptr;
}

class CronetTaskExecutor extends ffi.Opaque {}

class UploadDataProvider extends ffi.Opaque {}

class Cronet_EnginePtr extends ffi.Opaque {}

class Cronet_BufferPtr extends ffi.Opaque {}

class Cronet_UrlResponseInfoPtr extends ffi.Opaque {}

class Cronet_ErrorPtr extends ffi.Opaque {}

class Cronet_UploadDataProviderPtr extends ffi.Opaque {}

class Cronet_ExecutorPtr extends ffi.Opaque {}

class Cronet_RunnablePtr extends ffi.Opaque {}

class Cronet_UrlRequest extends ffi.Opaque {}

class Cronet_UrlRequestCallbackPtr extends ffi.Opaque {}

class Cronet_UploadDataSinkPtr extends ffi.Opaque {}

typedef _c_InitDartApiDL = ffi.IntPtr Function(
  ffi.Pointer<ffi.Void> data,
);

typedef _dart_InitDartApiDL = int Function(
  ffi.Pointer<ffi.Void> data,
);

typedef EngineShutdownCallback = ffi.Int32 Function(
  ffi.Pointer<Cronet_EnginePtr>,
);

typedef EngineDestroyCallback = ffi.Void Function(
  ffi.Pointer<Cronet_EnginePtr>,
);

typedef BufferCreateCallback = ffi.Pointer<Cronet_BufferPtr> Function();

typedef BufferInitWithAllocCallback = ffi.Void Function(
  ffi.Pointer<Cronet_BufferPtr>,
  ffi.Uint64,
);

typedef UrlResponseInfoHttpStatusCodeGetCallback = ffi.Int32 Function(
  ffi.Pointer<Cronet_UrlResponseInfoPtr>,
);

typedef ErrorMessageGetCallback = ffi.Pointer<ffi.Int8> Function(
  ffi.Pointer<Cronet_ErrorPtr>,
);

typedef UrlResponseInfoHttpStatusTextGetCallback = ffi.Pointer<ffi.Int8>
    Function(
  ffi.Pointer<Cronet_UrlResponseInfoPtr>,
);

typedef UploadDataProviderGetClientContextCallback = ffi.Pointer<ffi.Void>
    Function(
  ffi.Pointer<Cronet_UploadDataProviderPtr>,
);

typedef Cronet_Executor_ExecuteFunc = ffi.Void Function(
  ffi.Pointer<Cronet_ExecutorPtr>,
  ffi.Pointer<Cronet_RunnablePtr>,
);

typedef ExecutorCreateWithCallback = ffi.Pointer<Cronet_ExecutorPtr> Function(
  ffi.Pointer<ffi.NativeFunction<Cronet_Executor_ExecuteFunc>>,
);

typedef ExecutorSetClientContextCallback = ffi.Void Function(
  ffi.Pointer<Cronet_ExecutorPtr>,
  ffi.Pointer<ffi.Void>,
);

typedef ExecutorGetClientContextCallback = ffi.Pointer<ffi.Void> Function(
  ffi.Pointer<Cronet_ExecutorPtr>,
);

typedef ExecutorDestroyCallback = ffi.Void Function(
  ffi.Pointer<Cronet_ExecutorPtr>,
);

typedef RunnableRunCallback = ffi.Void Function(
  ffi.Pointer<Cronet_RunnablePtr>,
);

typedef RunnableDestroyCallback = ffi.Void Function(
  ffi.Pointer<Cronet_RunnablePtr>,
);

typedef _c_InitCronetDartApi = ffi.Void Function(
  ffi.Pointer<ffi.NativeFunction<EngineShutdownCallback>> engine_shutdown,
  ffi.Pointer<ffi.NativeFunction<EngineDestroyCallback>> engine_destroy,
  ffi.Pointer<ffi.NativeFunction<BufferCreateCallback>> buffer_create,
  ffi.Pointer<ffi.NativeFunction<BufferInitWithAllocCallback>>
      buffer_init_with_alloc,
  ffi.Pointer<ffi.NativeFunction<UrlResponseInfoHttpStatusCodeGetCallback>>
      status_code_get,
  ffi.Pointer<ffi.NativeFunction<ErrorMessageGetCallback>> error_message_get,
  ffi.Pointer<ffi.NativeFunction<UrlResponseInfoHttpStatusTextGetCallback>>
      http_status_text_get,
  ffi.Pointer<ffi.NativeFunction<UploadDataProviderGetClientContextCallback>>
      upload_provider_get_client_context,
  ffi.Pointer<ffi.NativeFunction<ExecutorCreateWithCallback>> create_with,
  ffi.Pointer<ffi.NativeFunction<ExecutorSetClientContextCallback>>
      set_client_context,
  ffi.Pointer<ffi.NativeFunction<ExecutorGetClientContextCallback>>
      get_client_context,
  ffi.Pointer<ffi.NativeFunction<ExecutorDestroyCallback>> executor_destroy,
  ffi.Pointer<ffi.NativeFunction<RunnableRunCallback>> runnable_run,
  ffi.Pointer<ffi.NativeFunction<RunnableDestroyCallback>> runnable_destroy,
);

typedef _dart_InitCronetDartApi = void Function(
  ffi.Pointer<ffi.NativeFunction<EngineShutdownCallback>> engine_shutdown,
  ffi.Pointer<ffi.NativeFunction<EngineDestroyCallback>> engine_destroy,
  ffi.Pointer<ffi.NativeFunction<BufferCreateCallback>> buffer_create,
  ffi.Pointer<ffi.NativeFunction<BufferInitWithAllocCallback>>
      buffer_init_with_alloc,
  ffi.Pointer<ffi.NativeFunction<UrlResponseInfoHttpStatusCodeGetCallback>>
      status_code_get,
  ffi.Pointer<ffi.NativeFunction<ErrorMessageGetCallback>> error_message_get,
  ffi.Pointer<ffi.NativeFunction<UrlResponseInfoHttpStatusTextGetCallback>>
      http_status_text_get,
  ffi.Pointer<ffi.NativeFunction<UploadDataProviderGetClientContextCallback>>
      upload_provider_get_client_context,
  ffi.Pointer<ffi.NativeFunction<ExecutorCreateWithCallback>> create_with,
  ffi.Pointer<ffi.NativeFunction<ExecutorSetClientContextCallback>>
      set_client_context,
  ffi.Pointer<ffi.NativeFunction<ExecutorGetClientContextCallback>>
      get_client_context,
  ffi.Pointer<ffi.NativeFunction<ExecutorDestroyCallback>> executor_destroy,
  ffi.Pointer<ffi.NativeFunction<RunnableRunCallback>> runnable_run,
  ffi.Pointer<ffi.NativeFunction<RunnableDestroyCallback>> runnable_destroy,
);

typedef _c_RegisterHttpClient = ffi.Void Function(
  ffi.Handle h,
  ffi.Pointer<Cronet_EnginePtr> ce,
);

typedef _dart_RegisterHttpClient = void Function(
  Object h,
  ffi.Pointer<Cronet_EnginePtr> ce,
);

typedef _c_RegisterCallbackHandler = ffi.Void Function(
  ffi.Int64 nativePort,
  ffi.Pointer<Cronet_UrlRequest> rp,
);

typedef _dart_RegisterCallbackHandler = void Function(
  int nativePort,
  ffi.Pointer<Cronet_UrlRequest> rp,
);

typedef _c_RemoveRequest = ffi.Void Function(
  ffi.Pointer<Cronet_UrlRequest> rp,
);

typedef _dart_RemoveRequest = void Function(
  ffi.Pointer<Cronet_UrlRequest> rp,
);

typedef Native_OnRedirectReceived = ffi.Void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
  ffi.Pointer<ffi.Int8> newLocationUrl,
);

typedef _dart_OnRedirectReceived = void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
  ffi.Pointer<ffi.Int8> newLocationUrl,
);

typedef Native_OnResponseStarted = ffi.Void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
);

typedef _dart_OnResponseStarted = void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
);

typedef Native_OnReadCompleted = ffi.Void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
  ffi.Pointer<Cronet_BufferPtr> buffer,
  ffi.Uint64 bytes_read,
);

typedef _dart_OnReadCompleted = void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
  ffi.Pointer<Cronet_BufferPtr> buffer,
  int bytes_read,
);

typedef Native_OnSucceeded = ffi.Void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
);

typedef _dart_OnSucceeded = void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
);

typedef Native_OnFailed = ffi.Void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
  ffi.Pointer<Cronet_ErrorPtr> error,
);

typedef _dart_OnFailed = void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
  ffi.Pointer<Cronet_ErrorPtr> error,
);

typedef Native_OnCanceled = ffi.Void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
);

typedef _dart_OnCanceled = void Function(
  ffi.Pointer<Cronet_UrlRequestCallbackPtr> self,
  ffi.Pointer<Cronet_UrlRequest> request,
  ffi.Pointer<Cronet_UrlResponseInfoPtr> info,
);

typedef _c_CronetTaskExecutorCreate = ffi.Pointer<CronetTaskExecutor>
    Function();

typedef _dart_CronetTaskExecutorCreate = ffi.Pointer<CronetTaskExecutor>
    Function();

typedef _c_CronetTaskExecutorDestroy = ffi.Void Function(
  ffi.Pointer<CronetTaskExecutor> executor,
);

typedef _dart_CronetTaskExecutorDestroy = void Function(
  ffi.Pointer<CronetTaskExecutor> executor,
);

typedef _c_InitCronetTaskExecutor = ffi.Void Function(
  ffi.Pointer<CronetTaskExecutor> self,
);

typedef _dart_InitCronetTaskExecutor = void Function(
  ffi.Pointer<CronetTaskExecutor> self,
);

typedef _c_CronetTaskExecutor_Cronet_ExecutorPtr_get
    = ffi.Pointer<Cronet_ExecutorPtr> Function(
  ffi.Pointer<CronetTaskExecutor> self,
);

typedef _dart_CronetTaskExecutor_Cronet_ExecutorPtr_get
    = ffi.Pointer<Cronet_ExecutorPtr> Function(
  ffi.Pointer<CronetTaskExecutor> self,
);

typedef _c_UploadDataProviderCreate = ffi.Pointer<UploadDataProvider>
    Function();

typedef _dart_UploadDataProviderCreate = ffi.Pointer<UploadDataProvider>
    Function();
